# easy-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  TODO.md  conanfile.txt
3p/glad/: CMakeLists.txt
3p/glad/include/glad/: glad.h
3p/glad/src/: glad.c
Components/: CMakeLists.txt
Components/c/: Transform.cpp
Components/h/: Transform.h
Core/: CMakeLists.txt
Core/c/: BufferData.cpp  Color.cpp  Position.cpp  RenderTarget.cpp  Shader.cpp  ShaderProgram.cpp  Vertex.cpp  VertexArray.cpp  VertexVector.cpp
Core/h/: BufferData.h  Color.h  DefaultShaders.h  Position.h  RenderTarget.h  Shader.h  ShaderProgram.h  Vertex.h  VertexArray.h  VertexVector.h
Shapes/: CMakeLists.txt
Shapes/c/: Rectangle.cpp  Shape.cpp  Triangle.cpp
Shapes/h/: Rectangle.h  Shape.h  Triangle.h
app/: CMakeLists.txt  main.cpp
cmake/: dependencies.cmake
